# aidra-feasibility-study

./: .env.example  .gitignore  AI_ACT_DECLARATION.md  CLAUDE.md  D4_INTERPRETABILITY_ANNEX.md  Dockerfile  Dockerfile.grafana  Dockerfile.loki  Dockerfile.prometheus  EVALUATOR_GUIDE.md  EVIDENCE.md  LICENSE  README.md  RISK_REGISTER.md  TECHNICAL_SPEC.md  analisis_completo.md  docker-compose.coolify.yml  docker-compose.test.yml  docker-compose.yml  mvp_oci.md  pyproject.toml
.claude/: QUALITY_GATES.md
.claude/agents/: ai-act-compliance.md  compression-benchmarker.md  detection-quality-reviewer.md  geoint-integrator.md  sar-preproc-auditor.md  tip-and-cue-evaluator.md  traceability-curator.md
.claude/commands/: audit-traceability.md  build-evidence-bundle.md  check-ai-act.md  diff-vs-myriad.md  eval-scene.md  run-triplet.md  score-against-rubric.md
.github/workflows/: ci.yml
evidence_bundles/: d3-20260506T080713Z.MANIFEST.json  d3-20260506T080713Z.MANIFEST.sha256  d3-20260506T083120Z.MANIFEST.json  d3-20260506T083120Z.MANIFEST.sha256  d3-20260506T083120Z.executions.csv  d3-20260506T083120Z.settings.json  d3-20260506T194308Z.MANIFEST.json  d3-20260506T194308Z.MANIFEST.sha256  d3-20260506T194308Z.executions.csv
grafana/dashboards/: 00-home.json  01-map-detections.json  02-pipeline-metrics.json  03-compression-bench.json  04-constraint-profiles.json  05-traceability.json  06-obdp-value.json  07-orbital-latency.json  08-orbital-resilience.json  09-tipcue-replay.json  10-evaluator-evidence.json
interpretability_runs/: manifest.json
interpretability_runs/173bbdb5-aaf2-489d-8e34-cec4243705d4_interp_a057ac00/: manifest.json
landing/: Caddyfile  index.html
loki/: loki-config.yml
models/: README.md
models/archived/: README.md
models/cards/: README.md  cfar-default.MODEL_CARD.md  vesseltracker-sar-yolov8-int8-dynamic.MODEL_CARD.md  vesseltracker-sar-yolov8.MODEL_CARD.md  yolov8n-vessel.MODEL_CARD.md  yolov8n.MODEL_CARD.md  yolov8s-vessel.MODEL_CARD.md
prometheus/: prometheus.yml
promtail/: promtail-config.yml
scripts/: build_d3_bundle.py  build_synthetic_manifest.py  build_xview3_manifest.py  capture_grafana_dashboards.sh  cleanup-bad-detections.sql  configure_public_dashboards.py  download-models.sh  filter_xview3_med.py  fine-tune.py  operational_metrics.py  quantize_to_int8.py  run_interpretability.py  run_validation.py  setup-oci.sh  validate_xview3_serial.py
src/: config.py  main.py
src/api/: benchmarks.py  detections.py  health.py  interpretability.py  metrics.py  models_api.py  (+9 more)
tests/: conftest.py  test_invariants.py
(+100 files in other folders)
