[project]
name = "aidra"
version = "1.0.0"
description = "AI-Enabled On-Board Data Processing Assessment — Vessel Detection MVP"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Base de datos
    "asyncpg>=0.29.0",

    # Geoespacial
    "rasterio>=1.3.10",
    "shapely>=2.0.4",
    "pyproj>=3.6.1",

    # IA / ML
    "ultralytics>=8.2.0",
    "torch>=2.3.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",

    # Ciencia de datos
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",

    # Procesamiento de imagenes
    "Pillow>=10.3.0",
    "opencv-python-headless>=4.10.0",

    # Copernicus
    "requests>=2.32.0",
    "pystac-client>=0.8.0",

    # HTTP async client
    "httpx>=0.27.0",

    # Scheduler
    "APScheduler>=3.10.4",

    # Observabilidad
    "prometheus-client>=0.20.0",
    "python-logging-loki>=0.3.1",

    # Configuracion
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Utilidades
    "psutil>=5.9.8",
    "python-multipart>=0.0.9",
    "global-land-mask>=1.0.0",  # informativo (flag on_land), nunca filtro

    # Docker SDK (para perfiles de restriccion)
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]
all = ["aidra[dev]"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "invariant: tests that enforce AIDRA domain invariants (I-SAR-*, I-DET-*, I-MOD-*, I-TRACE-*, I-EU-*, I-AIA-*)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
# FastAPI uses Query()/Depends()/etc. as parameter defaults — that is
# the framework's documented contract, not a bug. Bugbear flags them
# generically as B008; silence the rule project-wide for the API.
"src/api/*" = ["B008"]
